Presence notifications inside chat windows
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@1016 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/resources/styles/defaultStyle.css
+++ b/src/net/java/sip/communicator/impl/gui/resources/styles/defaultStyle.css
@@ -23,6 +23,15 @@ font-size:12;
 color:#2e538b
 }
 
+h4
+{
+margin:0px;
+font-family:Verdana;
+font-size:12;
+font-weight:bold;
+color:#B615A6
+}
+
 div
 {
 font-family:Verdana;
