--- a/src/net/java/sip/communicator/impl/gui/resources/styles/defaultStyle.css
+++ b/src/net/java/sip/communicator/impl/gui/resources/styles/defaultStyle.css
@@ -32,6 +32,24 @@ font-weight:bold;
 color:#FFC875
 }
 
+h5
+{
+margin:0px;
+font-family:Verdana;
+font-size:12;
+font-weight:bold;
+color:#CC0000
+}
+
+h6
+{
+margin:0px;
+font-family:Verdana;
+font-size:12;
+font-weight:bold;
+color:#990000
+}
+
 div
 {
 font-family:Verdana;
