The Debian package as well as the sip-communicator executable now uses the SIP Communicator version available in the build.xml (fixes issue #284)
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@2053 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/install/debian/changelog.tmpl
+++ b/resources/install/debian/changelog.tmpl
@@ -1,3 +1,9 @@
+sip-communicator (_VERSION_) unstable; urgency=low
+
+  * Nightly builds
+
+ -- Martin Andre <mandre@dev.java.net>  _DATE_
+
 sip-communicator (1.0-alpha2-1) unstable; urgency=low
 
   * Switching to alpha2 nightly	builds
