--- a/src/net/java/sip/communicator/impl/gui/resources/styles/defaultStyle.css
+++ b/src/net/java/sip/communicator/impl/gui/resources/styles/defaultStyle.css
@@ -49,6 +49,14 @@ font-size:12;
 font-weight:bold;
 color:#990000
 }
+p
+{
+margin:0px;
+font-family:Verdana;
+font-size:12;
+font-weight:bold;
+color:#62BD80
+}
 
 div
 {
