Updated Debian package: * Updated dependancies to put sun-jre as a first alternative where needed * Updated application categories in sip-communicator.desktop file * Put SC bundles and libraries in /usr/lib instead of /usr/share * Added a verbose and help option to launch script and updated man page   accordingly * Remove subversion info files from native lib dir
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3309 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/install/debian/changelog.tmpl
+++ b/resources/install/debian/changelog.tmpl
@@ -4,6 +4,18 @@ sip-communicator (_VERSION_) unstable; urgency=low
 
  -- Martin Andre <mandre@dev.java.net>  _DATE_
 
+sip-communicator (1.0-alpha3-1) unstable; urgency=low
+
+  * Switching to alpha3 nightly builds
+  * Updated dependancies to put sun-jre as a first alternative where needed
+  * Updated application categories in sip-communicator.desktop file
+  * Put SC bundles and libraries in /usr/lib instead of /usr/share
+  * Added a verbose and help option to launch script and updated man page
+    accordingly
+  * Remove subversion info files from native lib dir
+
+ -- Martin Andre <mandre@dev.java.net>  Tue, 11 Dec 2007 15:27:06 +0900
+
 sip-communicator (1.0-alpha2-1) unstable; urgency=low
 
   * Switching to alpha2 nightly	builds
