Installation package name and application name moved to a properties file.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3372 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/install/debian/control.tmpl
+++ b/resources/install/debian/control.tmpl
@@ -1,11 +1,11 @@
-Source: sip-communicator
+Source: _PACKAGE_NAME_
 Section: contrib/net
 Priority: optional
 Maintainer: Martin Andre <mandre@dev.java.net>
 Build-Depends: debhelper (>= 5), ant, ant-optional
 Standards-Version: 3.7.2
 
-Package: sip-communicator
+Package: _PACKAGE_NAME_
 Architecture: i386
 Depends: sun-java6-jre | sun-java5-jre | java-virtual-machine, sun-java6-jre | sun-java5-jre | java2-runtime, libxalan2-java, alsa-oss
 Description: the Java VoIP and Instant Messaging client
