--- a/resources/install/debian/rules.tmpl
+++ b/resources/install/debian/rules.tmpl
@@ -97,7 +97,7 @@ binary-arch: build install
 	dh_link
 	dh_compress
 	dh_fixperms
-	dh_strip
+	dh_strip -Xjdic_misc
 #	dh_perl
 #	dh_makeshlibs
 	dh_installdeb
