Make "deb" ant target build an amd64 binary package in addition to the i386 one. This amd64 package needs to be tested and is thus not taken in account in "deb-rel" ant target for deployment.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3776 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/install/debian/rules.tmpl
+++ b/resources/install/debian/rules.tmpl
@@ -59,7 +59,11 @@ install: build
 
 	# Copy OS specific and native libs
 	cp $(BASEDIR)/lib/os-specific/linux/*.jar debian/$(PACKAGE_NAME)/usr/lib/sip-communicator/lib/
+ifeq ($(DEB_HOST_ARCH),i386)
 	cp -r $(BASEDIR)/lib/native/linux debian/$(PACKAGE_NAME)/usr/lib/sip-communicator/lib/native
+else ifeq ($(DEB_HOST_ARCH),amd64)
+	cp -r $(BASEDIR)/lib/native/linux-64 debian/$(PACKAGE_NAME)/usr/lib/sip-communicator/lib/native
+endif
 
 	# Copy SIP Communicator bundles
 	cp $(BASEDIR)/sc-bundles/*.jar debian/$(PACKAGE_NAME)/usr/lib/sip-communicator/sc-bundles
