--- a/resources/install/debian/control.tmpl
+++ b/resources/install/debian/control.tmpl
@@ -6,7 +6,7 @@ Build-Depends: debhelper (>= 5), ant, ant-optional
 Standards-Version: 3.7.2
 
 Package: _PACKAGE_NAME_
-Architecture: i386
+Architecture: i386 amd64
 Depends: sun-java6-jre | sun-java5-jre, libxalan2-java, alsa-oss
 Description: the Java VoIP and Instant Messaging client
  SIP Communicator is an application that allows you to do audio/video
