Hardcodes the Product Id of the Windows MSI in order to have its different builds recognized as one and the same product.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4511 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/install/windows/installer-windows.wxs
+++ b/resources/install/windows/installer-windows.wxs
@@ -2,7 +2,7 @@
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
 
 <Product
-    Id="*"
+    Id="@WIX_PRODUCT_ID@"
     Language="1033"
     Manufacturer="@APP_NAME@"
     Name="@APP_NAME@"
