Replaces the use of the WiX MSI bootstrapper with the one associated with msistuff because the former breaks the MSI.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4524 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/install/windows/installer-windows.wxs
+++ b/resources/install/windows/installer-windows.wxs
@@ -243,6 +243,7 @@
             <Publish Dialog="MaintenanceTypeDlg" Control="Back" Event="NewDialog" Value="MaintenanceWelcomeDlg">1</Publish>
 
             <Property Id="ARPNOMODIFY" Value="1" />
+            <Property Id="ARPNOREPAIR" Value="1" />
         </UI>
 
         <UIRef Id="WixUI_Common" />
