--- a/resources/install/windows/installer-windows.wxs
+++ b/resources/install/windows/installer-windows.wxs
@@ -2,7 +2,7 @@
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
 
 <Product
-    Id="@WIX_PRODUCT_ID@"
+    Id="*"
     Language="1033"
     Manufacturer="@APP_NAME@"
     Name="@APP_NAME@"
@@ -19,6 +19,16 @@
     Languages="1033"
     Manufacturer="@APP_NAME@"
     SummaryCodepage="1252" />
+
+<Upgrade Id="@WIX_UPGRADE_CODE@">
+  <UpgradeVersion
+      IncludeMaximum="yes"
+      IncludeMinimum="yes"
+      Language="1033"
+      Maximum="0.0.0.0"
+      Minimum="0.0.0.0"
+      Property="UPGRADEFOUND" />
+</Upgrade>
 
 <Directory Id="TARGETDIR" Name="SourceDir">
   <Directory Id="ProgramFilesFolder" Name="PFiles">
@@ -107,6 +117,27 @@
 
   <TextStyle Id="GreyText" Blue="127" FaceName="Tahoma" Green="127" Red="127" Size="8" />
 
+            <!-- Modified ExitDialog -->
+            <Dialog Id="CExitDialog" Width="370" Height="270" Title="!(loc.ExitDialog_Title)">
+                <Control Id="Finish" Type="PushButton" X="236" Y="243" Width="56" Height="17" Default="yes" Cancel="yes" Text="!(loc.WixUIFinish)" />
+                <Control Id="Cancel" Type="PushButton" X="304" Y="243" Width="56" Height="17" Disabled="yes" Text="!(loc.WixUICancel)" />
+                <Control Id="Bitmap" Type="Bitmap" X="0" Y="0" Width="370" Height="234" TabSkip="no" Text="!(loc.ExitDialogBitmap)" />
+                <Control Id="Back" Type="PushButton" X="180" Y="243" Width="56" Height="17" Disabled="yes" Text="!(loc.WixUIBack)" />
+                <Control Id="BottomLine" Type="Line" X="0" Y="234" Width="370" Height="0" />
+                <Control Id="Description" Type="Text" X="135" Y="70" Width="220" Height="40" Transparent="yes" NoPrefix="yes" Text="!(loc.ExitDialogDescription)" />
+                <Control Id="Title" Type="Text" X="135" Y="20" Width="220" Height="60" Transparent="yes" NoPrefix="yes" Text="!(loc.ExitDialogTitle)" />
+                <Control Id="OptionalText" Type="Text" X="135" Y="110" Width="220" Height="80" Transparent="yes" NoPrefix="yes" Hidden="yes" Text="[WIXUI_EXITDIALOGOPTIONALTEXT]">
+                    <Condition Action="show">WIXUI_EXITDIALOGOPTIONALTEXT AND NOT Installed</Condition>
+                </Control>
+                <Control Id="OptionalCheckBoxText" Type="Text" X="150" Y="190" Width="205" Height="40" Hidden="yes" Transparent="yes" NoPrefix="yes" Text="[WIXUI_EXITDIALOGOPTIONALCHECKBOXTEXT]">
+                    <Condition Action="show">WIXUI_EXITDIALOGOPTIONALCHECKBOXTEXT AND NOT Installed</Condition>
+                </Control>
+                <Control Id="OptionalCheckBox" Type="CheckBox" X="135" Y="190" Width="10" Height="10" Hidden="yes" Property="WIXUI_EXITDIALOGOPTIONALCHECKBOX" CheckBoxValue="1">
+                    <Condition Action="show">WIXUI_EXITDIALOGOPTIONALCHECKBOXTEXT AND NOT Installed</Condition>
+                </Control>
+            </Dialog>
+
+            <!-- Modified WelcomeDlg -->
             <Dialog Id="CWelcomeDlg" Width="370" Height="270" Title="!(loc.WelcomeDlg_Title)">
                 <Control Id="Next" Type="PushButton" X="236" Y="243" Width="56" Height="17" Default="yes" Text="!(loc.WixUINext)" />
                 <Control Id="Cancel" Type="PushButton" X="304" Y="243" Width="56" Height="17" Cancel="yes" Text="!(loc.WixUICancel)">
@@ -124,26 +155,31 @@
 
   <Publish 
       Control="Finish"
-      Dialog="ExitDialog"
+      Dialog="CExitDialog"
       Event="DoAction"
       Value="LaunchApplication">
     <![CDATA[WIXUI_EXITDIALOGOPTIONALCHECKBOX = 1 AND JRE_VERSION >= "1.5" AND NOT Installed]]>
   </Publish>
   <Publish
       Control="Finish"
-      Dialog="ExitDialog"
+      Dialog="CExitDialog"
       Event="DoAction"
       Value="InstallJRE">
     <![CDATA[WIXUI_EXITDIALOGOPTIONALCHECKBOX = 1 AND JRE_VERSION < "1.5" AND NOT Installed]]>
   </Publish>
 
   <InstallUISequence>
+    <Show Dialog="CExitDialog" OnExit="success" />
     <Show Dialog="CWelcomeDlg" Before="ProgressDlg">NOT Installed</Show>
 
     <Custom Action="SetWIXUI_EXITDIALOGOPTIONALCHECKBOXTEXT" After="AppSearch">
       <![CDATA[JRE_VERSION < "1.5" AND NOT Installed]]>
     </Custom>
   </InstallUISequence>
+
+  <AdminUISequence>
+    <Show Dialog="CExitDialog" OnExit="success" />
+  </AdminUISequence>
 </UI>
 
 <CustomAction
@@ -162,6 +198,8 @@
     Value="Install Java(TM) SE Runtime Environment" />
 
 <InstallExecuteSequence>
+  <RemoveExistingProducts After="InstallFinalize" />
+
   <Custom Action="SetWIXUI_EXITDIALOGOPTIONALCHECKBOXTEXT" After="AppSearch">
     <![CDATA[JRE_VERSION < "1.5" AND NOT Installed]]>
   </Custom>
@@ -218,7 +256,7 @@
             <Publish Dialog="BrowseDlg" Control="OK" Event="DoAction" Value="WixUIValidatePath" Order="3">1</Publish>
             <Publish Dialog="BrowseDlg" Control="OK" Event="SpawnDialog" Value="InvalidDirDlg" Order="4"><![CDATA[WIXUI_INSTALLDIR_VALID<>"1"]]></Publish>
 
-            <Publish Dialog="ExitDialog" Control="Finish" Event="EndDialog" Value="Return" Order="999">1</Publish>
+            <Publish Dialog="CExitDialog" Control="Finish" Event="EndDialog" Value="Return" Order="999">1</Publish>
 
             <Publish Dialog="CWelcomeDlg" Control="Next" Event="NewDialog" Value="LicenseAgreementDlg">1</Publish>
 
