Adding bcprovider.jar to the runtime classpath for all installers
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4569 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/install/debian/sip-communicator.sh.tmpl
+++ b/resources/install/debian/sip-communicator.sh.tmpl
@@ -27,7 +27,7 @@ javabin=`which java`
 
 SCDIR=/usr/lib/sip-communicator
 LIBPATH=$SCDIR/lib
-CLASSPATH=$LIBPATH/jdic_stub.jar:$LIBPATH/jdic-all.jar:$LIBPATH/felix.jar:$SCDIR/sc-bundles/sc-launcher.jar:$SCDIR/sc-bundles/util.jar
+CLASSPATH=$LIBPATH/jdic_stub.jar:$LIBPATH/jdic-all.jar:$LIBPATH/felix.jar:$LIBPATH/bcprovider.jar:$SCDIR/sc-bundles/sc-launcher.jar:$SCDIR/sc-bundles/util.jar
 FELIX_CONFIG=$LIBPATH/felix.client.run.properties
 LOG_CONFIG=$LIBPATH/logging.properties
 COMMAND="$javabin -classpath $CLASSPATH -Dfelix.config.properties=file:$FELIX_CONFIG -Djava.util.logging.config.file=$LOG_CONFIG net.java.sip.communicator.launcher.SIPCommunicator"
