--- a/resources/install/debian/rules.tmpl
+++ b/resources/install/debian/rules.tmpl
@@ -77,7 +77,7 @@ endif
 	rm debian/$(PACKAGE_NAME)/usr/lib/sip-communicator/lib/bundle/junit.jar
 
 	# Make felix deploy its bundles in ~/.felix/sip-communicator.bin
-	# sed -i -e "s/felix.cache.profiledir=sip-communicator.bin/felix.cache.profile=sip-communicator.bin/" debian/$(PACKAGE_NAME)/usr/lib/sip-communicator/lib/felix.client.run.properties
+	sed -i -e "s/felix.cache.profiledir=sip-communicator.bin/felix.cache.profile=sip-communicator.bin/" debian/$(PACKAGE_NAME)/usr/lib/sip-communicator/lib/felix.client.run.properties
 
 
 # Build i386 files here.
@@ -102,7 +102,7 @@ binary-arch: build install
 	dh_link
 	dh_compress
 	dh_fixperms
-	#dh_strip -Xjdic_misc
+	dh_strip -Xjdic_misc
 #	dh_perl
 #	dh_makeshlibs
 	dh_installdeb
